--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="build/js/app.js"></script>
     <title></title>
   </head>
   <body>
