add jquery to accept alarm input

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <div class="current-time"></div>
     <form id="alarm">
       <label for="set-alarm">Alarm</label>
-      <input type="time">
+      <input type="time" id="set-alarm">
       <button type="submit">Set Alarm</button>
+      <div id="alarm-ison">
+        <h2>Wake the Fuck Up</h2>
+      </div>
     </form>
   </body>
 </html>
