add alarm check functionality on button click

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       <label for="set-alarm">Alarm</label>
       <input type="time" id="set-alarm">
       <button type="submit">Set Alarm</button>
-      <div id="alarm-alert">
-        <h2>Wake the Fuck Up</h2>
-      </div>
     </form>
+    <button id="check">Check Alarm???</button>
+    <div id="alarm-alert">
+      <h2>Wake the Fuck Up</h2>
+    </div>
   </body>
 </html>
